# cpp_data

./: .clang-format  .clangd  .gitignore  CMakeCache.txt  CMakeLists.txt  build.sh  cmake_install.cmake  cpp.sh
include/mk-array/: mk-array.h  mk-array.hpp  mk-list.h  mk-list.hpp  mk-stack.hpp
src/: main.cpp
src/mk-array/: mk-array.cpp
